--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-session": "^1.18.1",
     "pg": "^8.13.1",
     "postcss": "^8.4.49",
-    "postcss-cli": "^11.0.0"
+    "postcss-cli": "^11.0.0",
+    "sitemap": "^8.0.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.15"
